# gutp

./: .env  .gitignore  Cargo.toml  README.md  build_app_image.sh  devmode-1node-05s-tmpl.yml  gutp-docker-compose-1node.yml  gutp-docker-compose-dev.yml  gutp_app-a.Dockerfile  gutp_app.Dockerfile  init_pg.sql  start.sh
docker/: gutp-docker-compose-1node.yml  gutp-docker-compose-3node.yml  gutp-docker-compose-4node.yml  init_pg.sql  start-1node.sh  start-4node.sh
docker/vintage/: config.yml
docker/vintage4node/node1/vintage/: config.yml
docker/vintage4node/node2/vintage/: config.yml
docker/vintage4node/node3/vintage/: config.yml
docker/vintage4node/node4/vintage/: config.yml
gutp/: Cargo.toml  spin.toml
gutp-types/: Cargo.toml
gutp-types/src/: lib.rs
gutp/src/: comment.rs  constants.rs  lib.rs  moderator.rs  post.rs  postdiff.rs  posttag.rs  subspace.rs  tag.rs  user.rs  utils.rs
sample-requets/: batch.sh  post-create.hurl  post-update.hurl  subspace-create.hurl
schema/: schema.sql
vintage/: config.yml
