[package]
name = "gutp-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin-sdk = "3.0"
json-digest = "0.0.16"
serde = { version = '1.0', default-features = false, features = ['derive'] }
serde_json = { version = '1.0', default-features = false, features = ['alloc'] }

eightfish-sdk = { path = "../../eightfish/sdk" }
eightfish-derive = { path = "../../eightfish/eightfish-derive" }

sql-builder = "3.1"
