[package]
name    = "gutp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
# Useful crate to handle errors.
anyhow = "1"
# Crate to simplify working with bytes.
bytes = "1"
# The Spin SDK.
spin-sdk = "3.0"
# Crate that generates Rust Wasm bindings from a WebAssembly interface.
form_urlencoded = "1.1"
serde = { version = '1.0', default-features = false, features = ['derive'] }
serde_json = { version = '1.0', default-features = false, features = ['alloc'] }
json-digest = "0.0.16"
sql-builder = "3.1"

# eightfish-sdk = { package = "eightfish-sdk", path = "https://github.com/eightfish-org/eightfish"}
# eightfish-derive = {package = "eightfish-derive", git = "https://github.com/eightfish-org/eightfish"}
# spin_worker = {package = "spin_worker", git = "https://github.com/eightfish-org/eightfish"}

eightfish-sdk = { path = "../../eightfish/sdk" }
eightfish-derive = { path = "../../eightfish/eightfish-derive" }
spin_worker = { path = "../../eightfish/spin_worker" }

gutp-types = {path = "../gutp-types/"}
